--- a/index.html
+++ b/index.html
@@ -102,6 +102,32 @@ var fillStyle = '#ffffff'
 var lineWidth = 3
 var strokes = 0
 var canvasHistory = {pos:0,img:[]}
+// configure Nextcloud filedrop directory
+// #{"autosaves":["https://coldborn.com/index.php/s/L2NrRaBw3LHoA8b"]}
+var config = decodeURIComponent(window.location.hash.slice(1))
+
+if(config){
+	try{
+		config = JSON.parse(config)
+	}catch(e){
+		d(e.message)
+		config = null
+	}
+}
+
+async function postData(url = '', method = 'PUT', data = {}) {
+  const response = await fetch(url, {
+    method: method, // *GET, POST, PUT, DELETE, etc.
+    mode: 'cors', // no-cors, *cors, same-origin
+    cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
+    credentials: 'same-origin', // include, *same-origin, omit
+    headers: { 'Content-Type': 'application/json' },
+    redirect: 'follow', // manual, *follow, error
+    referrerPolicy: 'no-referrer',
+    body: JSON.stringify(data)
+  })
+  return response.json()
+}
 
 function setBrushSize(size){
 	lineWidth = size
@@ -111,7 +137,8 @@ function upload(data, cb) {
     img = new Image()
     img.onload = () => {
 		ctx.clearRect(0, 0, ctx.canvas.width, ctx.canvas.height)
-		ctx.drawImage(img, 0, 0, img.width, img.height, 0, 0, canvas.width, canvas.height) // CPU intensive operation (Easy but ugly fix for smooter quadratic curve)
+		ctx.drawImage(img, 0, 0, img.width, img.height, 0, 0, canvas.width, canvas.height)
+//		ctx.drawImage(img, 0, 0, img.width, img.height)
 		img = new Image
 		img.src = canvas.toDataURL("image/png")
     }
@@ -207,6 +234,8 @@ function canvasHistoryPush(){
 	if( canvasHistory.img.length > canvasHistoryLimit ) canvasHistory.img.shift()
 	canvasHistory.img.push(img)
 	canvasHistory.pos = canvasHistory.img.length - 1
+
+	if(config) for(let url of config.autosaves) postData(url, 'PUT', {img:img.src})
 }
 
 function init() {
@@ -234,11 +263,13 @@ function init() {
 	let myPicker = new JSColor('#cPicker', {format:'rgba'})
 	myPicker.option('previewSize', 400)
 	myPicker.option({
-		'width': 101,
+		'width': 150,
 		'position': 'right',
 		'backgroundColor': '#333',
 		'onChange':color,
-		'value':brushColor
+		'value':brushColor,
+		'hideOnPaletteClick:true':true,
+		'palette': '#fff #000 #808080 #996e36 #f55525 #ffe438 #88dd20 #22e0cd #269aff #bb1cd4',
 	})
 	document.getElementById('cPicker').style.background = brushColor
 
@@ -247,6 +278,36 @@ function init() {
 
 function color(obj) {
 	brushColor = document.querySelector('#cPicker').dataset.currentColor
+}
+
+function dataURItoBlob(dataURI) {
+    var byteString = atob(dataURI.split(',')[1]);
+    var mimeString = dataURI.split(',')[0].split(':')[1].split(';')[0];
+    var ab = new ArrayBuffer(byteString.length);
+    var ia = new Uint8Array(ab);
+    for (var i = 0; i < byteString.length; i++) {
+        ia[i] = byteString.charCodeAt(i);
+    }
+
+    return new Blob([ab], {type: mimeString});
+}
+
+function share(){
+	let filesArray = []
+	let file = dataURItoBlob(img.src)
+	filesArray.push(file)
+	d(navigator.canShare({ files: filesArray }))
+//	if (navigator.canShare && navigator.canShare({ files: filesArray })) {
+	navigator.share({
+		files: filesArray,
+		title: 'My drawing',
+		text: 'Drawn with https://reekol.github.io/draw.html',
+	})
+	.then(() => console.log('Share was successful.'))
+	.catch((error) => console.log('Sharing failed', error));
+// 	} else {
+// 	console.log(`Your system doesn't support sharing files.`);
+// 	}
 }
 
 function toggleFullscreen() {
@@ -269,33 +330,11 @@ window.onresize = initCanvas;
 <body onload="init()">
     <canvas id="canvas" style="object-fit:contain;"></canvas>
     <div class="instruments">
-		<div class="picker" id="cPicker" ></div>
-        <div class="picker" onclick="eraser()"      ><i class="fas fa-eraser"></i></div>
-        <div class="picker">
-			<select id="brushSizePicker" onchange="setBrushSize(this.value)">
-				<option value=1  >1 </option>
-				<option value=2  >2 </option>
-				<option value=3  >3 </option>
-				<option value=4  >4 </option>
-				<option value=5  >5 </option>
-				<option value=6  >6 </option>
-				<option value=7  >7 </option>
-				<option value=8  >8 </option>
-				<option value=9  >9 </option>
-				<option value=10 >10</option>
-				<option value=11 >11</option>
-				<option value=12 >12</option>
-				<option value=13 >13</option>
-				<option value=14 >14</option>
-				<option value=15 >15</option>
-				<option value=16 >16</option>
-				<option value=17 >17</option>
-				<option value=18 >18</option>
-				<option value=19 >19</option>
-				<option value=20 >20</option>
-
-			</select>
+		<div class="picker" id="cPicker" ondblclick="jscolor.hide()" ></div>
+        <div class="picker" style="width:110px;padding-top:3px">
+       		<input style="width:100px" type="range" min="1" max="30" id="brushSizePicker" onchange="setBrushSize(this.value)" />
 		</div>
+        <div class="picker" onclick="eraser()"      ><i class="fas fa-eraser"></i></div>
 		<div class="picker" >
 			<label class="container">
 			<input id="trackFinger" type="checkbox" checked="checked" onchange="fTrack(this)">
@@ -308,17 +347,20 @@ window.onresize = initCanvas;
 				<i class="fas fa-upload"></i>
 			</label>
         </div>
+        <div class="picker" onclick="erase()"     ><i class="fas fa-info-circle"></i></div>
         <div class="picker" onclick="erase()"     ><i class="fas fa-window-close"></i></div>
         <div class="clear"></div>
         <div class="picker" onclick="save()"        ><i class="fas fa-save"></i></div>
         <div class="clear"></div>
-        <div class="picker" onclick="toggleFullscreen()"     ><i class="fas fa-expand-arrows-alt"></i></div>
+        <div class="picker" onclick="toggleFullscreen()"    ><i class="fas fa-expand-arrows-alt"></i></div>
         <div class="clear"></div>
-        <div class="picker" onclick="location.reload()"      ><i class="fas fa-sync-alt"></i></div>
+        <div class="picker" onclick="location.reload()"     ><i class="fas fa-sync-alt"></i></div>
         <div class="clear"></div>
-        <div class="picker" onclick="canvasHistoryUndo()"    ><i class="fas fa-undo-alt"></i></div>
+        <div class="picker" onclick="canvasHistoryUndo()"   ><i class="fas fa-undo-alt"></i></div>
         <div class="clear"></div>
-        <div class="picker" onclick="canvasHistoryRedo()"    ><i class="fas fa-redo-alt"></i></div>
+        <div class="picker" onclick="canvasHistoryRedo()"   ><i class="fas fa-redo-alt"></i></div>
+        <div class="clear"></div>
+        <div class="picker" onclick="share()"    			><i class="fas fa-share-alt"></i></div>
     </div>
 
 <style> #debug{ height:100px; overflow:auto; border:1px solid red; } </style>
