--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ var img = new Image
 var canvasHistoryLimit = 10
 var brushColor = '#000'
 var fillStyle = '#ffffff'
-var lineWidth = 3
+var lineWidth = 6
 var strokes = 0
 var canvasHistory = {pos:0,img:[]}
 // configure Nextcloud filedrop directory
@@ -189,9 +189,18 @@ function initCanvas(){
 //	img.src = canvas.toDataURL("image/png")
 	ctx.drawImage(img, 0, 0, img.width, img.height)
 //	d(window.visualViewport.scale)
+	document.onkeydown = KeyPress;
+}
+
+function KeyPress(e) {
+      var evtobj = window.event? event : e
+      d(evtobj)
+      if (evtobj.keyCode == 90 && evtobj.ctrlKey && !evtobj.shiftKey ) canvasHistoryUndo()
+      if (evtobj.keyCode == 90 && evtobj.ctrlKey &&  evtobj.shiftKey ) canvasHistoryRedo()
 }
 
 function paint(e){
+
 	strokes++
 	points.push({ x: e.clientX, y: e.clientY })
 
@@ -212,6 +221,7 @@ function paint(e){
 		var yc = (points[i].y + points[i + 1].y) / 2;
 		ctx.quadraticCurveTo(points[i].x, points[i].y, xc, yc);
 	}
+
 // curve through the last two points
 // ctx.quadraticCurveTo(points[i].x, points[i].y, points[i+1].x,points[i+1].y);
 
