--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
 <html>
 <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="mobile-web-app-capable" content="yes">
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="mobile-web-app-capable" content="yes">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.0/css/all.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jscolor/2.4.5/jscolor.min.js"></script>
 <style>
+
+@media print {
+  body * {
+    visibility: hidden;
+  }
+  #canvas, #canvas * {
+    visibility: visible;
+  }
+  #canvas {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+}
+
 html, body{
  background:#fff
 }
+
 .clear{
  clear:both
 }
+
 /* Hide the browser's default checkbox */
 .container input {
   position: absolute;
@@ -44,6 +61,7 @@ html, body{
     margin:0;
     padding:0;
 }
+
 .picker{
     text-align:center;
     border-radius:4px;
@@ -62,6 +80,7 @@ html, body{
     margin-top:5px;
     overflow:hidden;
 }
+
 .picker i {
  margin-top: 5px
 }
@@ -80,12 +99,15 @@ html, body{
 	border-radius:4px;
     border-bottom:4px solid #444;
 }
+
 body, #canvas, #canvasimg{
     touch-action: none;
 }
+
 input[type="file"] {
     display: none;
 }
+
 </style>
 <script type="text/javascript">
 let d = console.log
@@ -97,10 +119,11 @@ function fTrack(e){
 function hwrToggle(e){
 	hwrEnable = e.checked ? true : false;
 	hwr.style.display = hwrEnable ? 'block' : 'none'
+	handWriting()
 }
 
 var ctx, canvas, isDrawing, hwr, strokesArr = [], points = [ ]
-var hwrEnable = true
+var hwrEnable = false
 var trackFinger = true
 var img = new Image
 var canvasHistoryLimit = 10
@@ -233,14 +256,14 @@ async function handWriting(){
 		)
 	if(res[0] === 'SUCCESS'){
 		res = (res[1][0][1].splice(0,4))
-		d(res[0].length)
 		if(typeof res[0] === 'undefined') return
 		hwr.innerHTML = res.join(', ')
 
-		if(res[0].length < 4 ) return
+		if(res[0].length < 5 ) return
 		let wiki = await getWiki(res[0])
 		res[0] = `<a href="${wiki[3][0]}" target="_new">${res[0]}</a>`
-		hwr.innerHTML = res.join(', ')
+		hwr.innerHTML = res[0]//.join(', ')
+		
 	}
 
 }
@@ -302,10 +325,11 @@ function init() {
 
 	initCanvas()
 	hwr = document.getElementById('hwr')
+	document.getElementById('hwrEnable').checked = (hwrEnable ? 'checked' : false)
+	hwr.style.display = (hwrEnable ? 'block' : 'none')
 	document.getElementById('brushSizePicker').value = lineWidth
 
 	canvas.onpointerdown =  e => {
-
 		if(e.pointerType == 'touch' && !trackFinger) return;
 		isDrawing = true
 		points.push({ x: e.clientX, y: e.clientY })
@@ -350,6 +374,9 @@ function init() {
 	document.getElementById('cPicker').style.background = brushColor
 }
 
+function printIt(){
+	window.print()
+}
 function color(obj) {
 	brushColor = document.querySelector('#cPicker').dataset.currentColor
 }
@@ -408,6 +435,8 @@ window.onresize = initCanvas;
 		<div class="picker" onclick="canvasHistoryUndo()"   ><i class="fas fa-undo-alt"></i></div>
 		<div class="clear"></div>
 		<div class="picker" onclick="canvasHistoryRedo()"	><i class="fas fa-redo-alt"></i></div>
+		<div class="clear"></div>
+		<div class="picker" onclick="printIt()"				><i class="fas fa-print"></i></div>
 		<div class="clear"></div>
 		<div class="picker" onclick="erase()"     			><i class="fas fa-window-close"></i></div>
 		<div class="picker" id="hwr" style="width:110px;height:280;padding-top:3px;margin-right:10px;position:fixed;top:0px;right:0">
